# spbgu-parser

./: .gitignore  links.txt  pyproject.toml
parsed_data/: 01.03.01 Математика.json  01.03.02 Прикладная математика, программирование и искусственный интеллект.json  01.03.02 Прикладная математика, фундаментальная информатика и программирование.json  01.03.02 Современное программирование.json  01.03.03 Механика и математическое моделирование.json  01.05.01 Фундаментальная математика.json  01.05.01 Фундаментальная механика.json  02.03.01 Математика и компьютерные науки.json  02.03.01 Науки о данных.json  02.03.02 Большие данные и распределенная цифровая платформа.json  02.03.02 Программирование и информационные технологии.json  02.03.03 Технологии программирования.json  03.03.01 Инженерно-ориентированная физика.json  03.03.01 Прикладные физика и математика.json  03.03.02 Физика.json  03.05.01 Астрономия.json  04.03.01 Химия.json  04.03.02 Химическое материаловедение.json  05.03.01 Геология.json  05.03.02 География.json  05.03.03 Картография и геоинформатика.json  05.03.04 Гидрометеорология.json  05.03.06 Экология и природопользование.json  06.03.01 Биология.json  06.03.02 Почвоведение.json  09.03.03 Искусственный интеллект и наука о данных.json  09.03.03 Прикладная информатика в области искусств и гуманитарных наук.json  09.03.04 Программная инженерия.json  21.03.01 Нефтегазовое дело.json  21.03.02 и информационное обеспечение.json  27.03.03 Прикладные компьютерные технологии.json  31.05.01 Лечебное дело.json  31.05.03 Стоматология.json  37.03.01 Психология.json  (+58 more)
(+7 files in other folders)
