[tool.poetry]
name = "spbgu-parser"
version = "0.1.0"
description = ""
authors = ["Shmonov Matvey <meology77@gmail.com>"]
readme = "README.md"
packages = [{include = "spbgu_parser"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
