[tool.poetry]
name = "spbgu-parser"
version = "0.1.0"
description = ""
authors = ["Shmonov Matvey <meology77@gmail.com>"]
readme = "README.md"
packages = [{include = "spbgu_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^4.9.3"
bs4 = "^0.0.1"
fake-useragent = "^1.1.3"
aiohttp = "^3.8.4"
aiohttp-retry = "^2.8.3"
aiofile = "^3.8.7"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
